--- a/src/styles/recordings.css
+++ b/src/styles/recordings.css
@@ -222,16 +222,17 @@
   background-color: rgba(33, 150, 243, 0.1);
 }
 
-/* 三角形播放圖標 */
+/* 空心三角形播放圖標 */
 .play-btn::before {
   content: '';
   display: inline-block;
   width: 0;
   height: 0;
-  border-left: 6px solid #2196F3;
-  border-top: 4px solid transparent;
-  border-bottom: 4px solid transparent;
-  margin-left: 2px;
+  border-left: 5px solid #2196F3;
+  border-right: 0;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  margin-left: 1px;
   transition: border-left-color 0.3s;
   vertical-align: middle;
 }
